--- a/content/resume/index.html
+++ b/content/resume/index.html
@@ -231,4 +231,7 @@
   <p>
     built using: <a href="http://sass-lang.com/">Sass</a>, <a href="http://jashkenas.github.com/coffee-script/">CoffeeScript</a> and <a href="http://nanoc.stoneship.org/">Nanoc</a>. <a href="http://validator.w3.org/check?uri=http%3A%2F%2Fwww.maximeliron.com%2Fresume%2F">HTML5 compliant</a>.
   </p>
+  <p>
+    <a href="https://github.com/ximus/maximeliron.com">Source on Github</a>
+  </p>
 </footer>
