--- a/content/resume/index.html
+++ b/content/resume/index.html
@@ -55,10 +55,7 @@
 <section id="profile">
   <h2>Profile<a href="#" class="top">back to top &uarr;</a></h2>
   <p>
-     I am a web developer from the south of France, just moved to San Francisco bay area. I have an interest in nearly all fields of technology and gather knowledge in all those fields. I have acquired concrete experience in the field of web development and graphic design and I have a distinct interest for the technical foundations of computer networks and web-enabling technologies. I have a strong understanding of web systems. My aims are not to implement such systems but to imagine, refactor and architect web services and architectures. 
-  </p>
-  <p>
-    My goal is to blur the line between humans and computers.
+     I am a web developer from the south of France, just moved to San Francisco bay area, looking for a position as a developer. I have an interest in nearly all fields of technology and gather knowledge in all those fields. I have acquired concrete experience in the field of web development and graphic design and I have a distinct interest for the technical foundations of computer networks and all web-enabling technologies. I have a strong understanding of web systems. My aim is to blur the line between humans and computers. 
   </p>
   <p>
     I have worked independently for the past six years with short breaks during which I travelled.
@@ -208,8 +205,10 @@
     <li>Innovative and creative thinking</li>
     <li>People</li>
     <li>Understanding things, learning</li>
+    <li>Designing web system architectures</li>
     <li>Technology</li>
     <li>Robotics</li>
+    <li>Data Visualization</li>
     <li>Travel -- Discovered North America, South America, South Asia, Europe with a back pack</li>
     <li>Sports -- Main sport is tennis, used to be rugby, I hike and run regularly</li>
     <li>Outdoors</li>
