--- a/content/resume/index.html
+++ b/content/resume/index.html
@@ -84,8 +84,8 @@
   <div>
     <h3>Other Technical</h3>
     <ul class="starme">
-      <li>Ruby <span>6/7</span></li>
-      <li>CoffeeScript <span>3/7</span></li>
+      <li>Ruby <span>5/7</span></li>
+      <li>CoffeeScript <span>4/7</span></li>
       <li>Databases (SQL, NoSQL) <span>4/7</span></li>
       <li>Cloud Architectures <span>5/7</span></li>
       <li>Sys Admin (Unix-like) <span>4/7</span></li>
@@ -206,6 +206,7 @@
     <li>People</li>
     <li>Understanding things, learning</li>
     <li>Designing web system architectures</li>
+    <li>I really like user interfaces</li>
     <li>Technology</li>
     <li>Robotics</li>
     <li>Data Visualization</li>
