--- a/content/resume/index.html
+++ b/content/resume/index.html
@@ -11,7 +11,7 @@
   </p>
 </header>
 
-<div id="nav">
+<div id="toc">
   <h2>Table of Contents</h2>
   <nav>
     <ul>
@@ -24,6 +24,7 @@
       <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
+  <a href="maxime-liron-resume.pdf" class="with-icon">PDF Version</a>  
 </div>
 
 <section id="contact">
@@ -232,6 +233,6 @@
     built using: <a href="http://sass-lang.com/">Sass</a>, <a href="http://jashkenas.github.com/coffee-script/">CoffeeScript</a> and <a href="http://nanoc.stoneship.org/">Nanoc</a>. <a href="http://validator.w3.org/check?uri=http%3A%2F%2Fwww.maximeliron.com%2Fresume%2F">HTML5 compliant</a>.
   </p>
   <p>
-    <a href="https://github.com/ximus/maximeliron.com">Source on Github</a>
+    <a href="https://github.com/ximus/maximeliron.com">Source on Github</a> | <a href="maxime-liron-resume.pdf">Download this as a PDF</a>
   </p>
 </footer>
