--- a/content/resume/index.html
+++ b/content/resume/index.html
@@ -227,7 +227,7 @@
     <img src="http://www.w3.org/html/logo/badge/html5-badge-h-css3-semantics.png" width="90" height="35" alt="HTML5 Powered with CSS3 / Styling, and Semantics" title="HTML5 Powered with CSS3 / Styling, and Semantics">
   </a>
   <p>
-    (work in progress, suggestions <a href="mailto:&#109;&#097;&#120;&#105;&#109;&#101;&#108;&#105;&#114;&#111;&#110;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">welcomed</a>)
+    last modified: <%= Time.now.strftime("%m/%d/%Y") %> - (work in progress, suggestions <a href="mailto:&#109;&#097;&#120;&#105;&#109;&#101;&#108;&#105;&#114;&#111;&#110;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">welcomed</a>)
   </p> 
   <p>
     built using: <a href="http://sass-lang.com/">Sass</a>, <a href="http://jashkenas.github.com/coffee-script/">CoffeeScript</a> and <a href="http://nanoc.stoneship.org/">Nanoc</a>. <a href="http://validator.w3.org/check?uri=http%3A%2F%2Fwww.maximeliron.com%2Fresume%2F">HTML5 compliant</a>.
