--- a/content/resume/index.html
+++ b/content/resume/index.html
@@ -1,17 +1,18 @@
+---
+title: "Maxime Liron's Resume"
+---
 <header>
-  <hgroup>
-    <h1>Maxime Liron's Resume</h1>
-    <h2>
-      <img src="/images/small-html5.png" alt="HTML5 Logo" height="15" width="15">
-      <span title="HTML5 is the cornerstone of the W3C's open web platform; a framework designed to support innovation and foster the full potential the web has to offer. Heralding this revolutionary collection of tools and standards, the HTML5 identity system provides the visual vocabulary to clearly classify and communicate our collective efforts. (source: W3C)">HTML5</span> developer
-    </h2>
-  </hgroup>
+  <h1>Maxime Liron's Resume</h1>
+  <h2>
+    <img src="/images/small-html5.png" alt="HTML5 Logo" height="15" width="15">
+    Full Stack Web developer
+  </h2>
   <p>
     Bilingual -- English and French, canadian and french citizenships
   </p>
 </header>
 
-<div id="toc">
+<aside id="toc">
   <h2>Table of Contents</h2>
   <nav>
     <ul>
@@ -24,8 +25,8 @@
       <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
-  <a href="maxime-liron-resume.pdf" class="with-icon">PDF Version</a>  
-</div>
+  <a href="maxime-liron-resume.pdf" class="with-icon pdf-link">PDF Version</a>
+</aside>
 
 <section id="contact">
   <h2 class="visuallyhidden">Contact</h2>
@@ -38,126 +39,145 @@
       <h3>Skype</h3>
       <a href="skype:maxime.liron">maxime.liron</a>
     </li>
-    <!-- <li class="tel">
-      <h3>Phone</h3>
-      <p>
-        (+33) 4 42 21 45 24 
-      </p>
-    </li> --> 
     <li class="github">
       <h3>Github</h3>
-      <a href="https://github.com/ximus">github.com/ximus</a>
+      <a href="https://github.com/ximus" target="blank">github.com/ximus</a>
     </li>
   </ul>
 </section>
 
 <article>
-  
+
 <section id="profile">
-  <h2>Profile<a href="#" class="top">back to top &uarr;</a></h2>
+  <h2>Profile</h2>
   <p>
-     I am a web developer from the south of France, just moved to San Francisco bay area, looking for a position as a developer. I have an interest in nearly all fields of technology and gather knowledge in all those fields. I have acquired concrete experience in the field of web development and graphic design and I have a distinct interest for the technical foundations of computer networks and all web-enabling technologies. I have a strong understanding of web systems. My aim is to blur the line between humans and computers. 
+    Web developer from the south of France, worked in San Francisco for two years. I have a strong interest for all fields of technology, always learning. I have acquired concrete experience in the field of web development and web interaction design. I have a good understanding of web systems.
   </p>
   <p>
-    I have worked independently for the past six years with short breaks during which I travelled.
+    I work mainly on the technical side of web applications, but I am always attentive to the bigger picture. I am most productive when I understand the mission behind a project.
   </p>
+<!--   <p>
+    I hold the ability to rule them all: I can quickly understand non-trivial tools and practices. This allows me to be productive fast.
+  </p> -->
 </section>
 
 <section id="skills">
-  <h2>Skills Summary <a href="#" class="top">back to top &uarr;</a></h2>
-  
+  <h2>Skills Summary </h2>
+
   <div class="first">
-    <h3>HTML5 Related</h3>
+    <h3>Front-end</h3>
     <ul class="starme">
-      <li>CSS3 <span>7/7</span></li>
-      <li>Semantics <span>7/7</span></li>
-      <li>Local Storage <span>7/7</span></li>
-      <li>Geolocation <span>7/7</span></li>
-      <!-- <li>Drag and Drop <span>7/7</span></li> -->
-      <li>Mobile <span>6/7</span></li>                 
+      <li>HTML <span>7/7</span></li>
+      <li title="7/7 stars would qualify me as insane">CSS, SASS <span>6/7</span></li>
+      <li>Mobile <span>6/7</span></li>
       <li>Javascript <span>6/7</span></li>
-      <li>Rich HTML5 apps<span>5/7</span></li>      
-      <li><a href="http://www.sproutcore.com/" title="SproutCore is an MVC framework for building cutting edge HTML5 client apps, sponsered by Apple and used to build Apple iCloud">SproutCore</a> <span>4/7</span></li>
-      <li><a href="http://wwww.jquery.com/" title="Everyone's favorite DOM framework">JQuery</a> <span>7/7</span></li>      
-    </ul>
-  </div>
-  
-  <div>
-    <h3>Other Technical</h3>
-    <ul class="starme">
-      <li>Ruby <span>5/7</span></li>
-      <li>CoffeeScript <span>6/7</span></li>
-      <li>Databases (SQL, NoSQL) <span>4/7</span></li>
-      <li>Cloud Architectures <span>5/7</span></li>
-      <li>Sys Admin (Unix-like) <span>4/7</span></li>
-      <li>Python <span>2/7</span></li>
-      <li>Java <span>3/7</span></li>
-      <li>Git <span>5/7</span></li>
+      <li><a href="http://wwww.jquery.com/" title="Everyone's favorite DOM framework" target="blank">JQuery</a> <span>7/7</span></li>
+      <li><a href="http://www.sproutcore.com/" title="Framework for building large client side web applications, forked from Sproutcore framework" target="blank">AngularJS</a> <span>4/7</span></li>
+      <li><a href="http://www.sproutcore.com/" title="Framework for building large client side web applications, forked from Sproutcore framework" target="blank">EmberJS</a> <span>3/7</span></li>
       <li>Ability to Learn <span>7/7</span></li>
     </ul>
-  </div> 
-  
-  <div class="last">
-    <h3>Other</h3>
-    <ul> 
+    <hr>
+    <h3>Human</h3>
+    <ul class="inline-list">
       <li>Communication</li>
       <li>Problem Solving</li>
-      <li>Innovative Thinking</li>
-      <li>User Experience</li>
+      <li>Core Mission Understanding</li>
+      <li>Listenning</li>
+      <li>Independent</li>
       <li>Attention to Detail</li>
       <li>Dedication</li>
       <li>Hard working</li>
       <li>Relaxed</li>
     </ul>
-  </div>     
+  </div>
+
+  <div>
+    <h3>Back-end</h3>
+    <ul class="starme">
+      <li>Ruby <span>7/7</span></li>
+      <li>Rails <span>7/7</span></li>
+      <li>MySQL <span>5/7</span></li>
+      <li>Redis <span>6/7</span></li>
+      <li>Git <span>5/7</span></li>
+      <li>System Architectures <span>5/7</span></li>
+      <li>Sys Admin (Unix-like) <span>4/7</span></li>
+      <li>Go (language)<span>2/7</span></li>
+      <li>Ability to Learn <span>7/7</span></li>
+    </ul>
+    <hr>
+    <h3>Misc Technical</h3>
+    <ul class="inline-list">
+      <li title="The Apache Hadoop software library is a framework that allows for the distributed processing of large data sets across clusters of computers using simple programming models."><a href="http://hadoop.apache.org/">Hadoop</a></li>
+      <li>Java</li>
+      <li>CoffeeScript</li>
+      <li title="SproutCore is an open-source framework for building blazingly fast, innovative user experiences on the web."><a href="http://sproutcore.com/" target="blank">SproutCore</a></li>
+      <li><a href="http://spinejs.com/" target="blank">SpineJS</a></li>
+      <li title="Ansible is a powerful automation engine that makes systems and apps simple to deploy"><a href="http://www.ansible.com/" target="blank">Ansible</a></li>
+      <li>C</li>
+      <li>PHP</li>
+    </ul>
+  </div>
 </section>
 
 <section id="experience">
-  <h2>Experience<a href="#" class="top">back to top &uarr;</a></h2>
+  <h2>Experience</h2>
+
+  <p>
+    Six years of independent work, followed by two years of employment in silicon valley.
+  </p>
+
+  <h3>Web Engineering</h3>
   <ul>
+    <li>Much <em>front-end</em> experience</li>
+    <li>Designed multiple web applications from the ground up</li>
+    <li>Core participation in <em>large web deployment</em>, ~6 million users</li>
+    <li>Held strong responsibilities in <em>both front-end and back-ends</em> of web systems</li>
+    <li>Handling of critical <em>production</em> incidents effectively</li>
+    <li>Picking up complex scenarios quickly</li>
+    <li><em>Performance monitoring</em></li>
+    <li>Systems visibility, metrics</li>
+    <li>Payment systems</li>
+    <li>Large <em>email</em> delivery infrastructure</li>
+    <li><em>Test driven</em> development and working with a QA team</li>
+    <li>Investigating production systems (strace, dtrace, tcpdump, ...)</li>
     <li>
-      <h3>Web Application Development</h3>
+      Systems design
       <ul>
-        <li>Designed multiple web applications from the ground up</li>
-        <li>Studied the potential of <em>HTML5</em>, used it to enable greater user experience</li>
-        <li>Dealt with problems, learned from them</li>
-        <li>
-          Systems design
-          <ul>
-            <li>Understand the system as whole, taking into account more than the application code</li>
-            <li>Network architecture, <em>REST principles</em></li>
-            <li>Studied and deployed <em>Cloud architectures</em></li>
-          </ul>
-        </li>
+        <li>Understand the <em>system as whole</em>, thinking further than the business application code</li>
+        <li>Network architecture, <em>REST principles</em></li>
+        <li>Studied and deployed <em>Cloud architectures</em></li>
       </ul>
     </li>
-    <li>
-      <h3>Project Management</h3>
-      <ul>
-        <li>Worked with teams of up to three</li>
-        <li>Used to collaborating over the net</li>
-        <li>Understand project management tools (Basecamp, Skype, Dropbox, ...)</li>
-      </ul>
-    </li>
-    <li>
-      <h3>Communication Strategy</h3>
-      <ul>
-        <li>Participated in the thinking behind the marketing of multiple products</li>
-        <li>Participated in then successful promotion of a new service within a new and disruptive industry trend</li>
-        <li>Enabled sales team to augment their efficiency (and happiness) by loads by architecting a collaboration web app</li>
-      </ul>
-    </li>
+  </ul>
+
+  <h3>Product Development</h3>
+  <ul>
+    <li>Participated in the thinking behind the marketing of multiple products</li>
+    <li>Participated in the successful promotion of a new service within a new and disruptive industry trend</li>
+    <li>Allowed a sales team to greatly augment their efficiency (and happiness) by architecting a collaborative web app</li>
+    <li>Core participation in data-driven product development</li>
+    <li>Product developement through <em>experimentation</em></li>
+    <li>Development and implementation of data models for product behaviour</li>
+  </ul>
+
+  <h3>Organisations</h3>
+  <ul>
+    <li>Worked in <em>distributed teams</em> (US east/west, India, France)</li>
+    <li>Lean, fast moving <em>startup environments</em></li>
+    <li>Github-style, flat organisation</li>
+    <li>Experience with a <em>corporate envirnoment</em> and its constraints (need for stability, planning)</li>
+    <li>Led a session on scaling cloud infrastuctures at <a href="http://www.siliconvalley-codecamp.com/">Code Camp</a></li>
   </ul>
 </section>
 
 <section id="projects">
-  <h2>Past Projects<a href="#" class="top">back to top &uarr;</a></h2>
+  <h2>Past Projects</h2>
   <ul>
     <% for experience in experience_list %>
       <%= render 'experience', experience %>
     <% end %>
   </ul>
-  
+
   <section id="other-sites">
     <h3>Other Sites I've built:</h3>
     <ul>
@@ -176,30 +196,34 @@
 
 
 <section id="education">
-  <h2>Education<a href="#" class="top">back to top &uarr;</a></h2>
+  <h2>Education</h2>
 
   <p>
-    <em>High School</em> -- I was in boarding school in Canada (<a href="http://www.shawnigan.ca/">Shawnigan Lake School</a>) then in an international High school in the south of France, <a href="http://www.lyc-luynes.ac-aix-marseille.fr/" title="Web site in French">Lycée George Duby</a>.
+    <em>High School</em> -- I was in boarding school in Canada (<a href="http://www.shawnigan.ca/" target="blank">Shawnigan Lake School</a>) then in an international High school in the south of France, <a href="http://www.lyc-luynes.ac-aix-marseille.fr/" title="Web site in French" target="blank">Lycée George Duby</a>.
   </p>
 
   <p>
-    Self taught. My interest in the technical web started at 18 yold. Learned a lot through books, open source projects and online material, clocked in <em>many</em> hours watching footage of conference talks. Learned loads through client projects.
+    <em>Self taught</em> -- My interest in the technical web started at 17 yold. Learned a lot through books, open source projects and online material, clocked in <em>many</em> hours watching footage of conference talks. Learned loads through client projects.
   </p>
 
   <p>
     I left university after two years of physics and chemistry to pursue my web endeavors. The skills I learned did not require me to go to university but I do not rule out going back to university for harder to learn skills.
   </p>
+
+  <p>
+    I have a decent understanding of core computer science concepts (algorithms, compilers, ...). I am conscious of their roles and implications, though coming from a self-taught background, I have not studied them thouroughly. I am confident on my ability to strengthen my understanding of algorithms if the job requires it. I will do what is necessary to meet requirements.
+  </p>
 </section>
 
 
 <section id="interests">
-  <h2>Interests<a href="#" class="top">back to top &uarr;</a></h2>
+  <h2>Interests</h2>
 
   <p>
-    Most things interest me.
+    Most tickle my interest.
   </p>
 
-  <ul>
+  <ul class="inline-list">
     <li>Economics and finance</li>
     <li>World dynamics</li>
     <li>Enabling people to do more using the web</li>
@@ -220,19 +244,19 @@
   </ul>
 </section>
 
-</article>  
+</article>
 
-<footer> 
-  <a href="http://www.w3.org/html/logo/">
+<footer>
+  <a href="http://www.w3.org/html/logo/" target="blank">
     <img src="http://www.w3.org/html/logo/badge/html5-badge-h-css3-semantics.png" width="90" height="35" alt="HTML5 Powered with CSS3 / Styling, and Semantics" title="HTML5 Powered with CSS3 / Styling, and Semantics">
   </a>
   <p>
     last modified: <%= Time.now.strftime("%m/%d/%Y") %> - (work in progress, suggestions <a href="mailto:&#109;&#097;&#120;&#105;&#109;&#101;&#108;&#105;&#114;&#111;&#110;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">welcomed</a>)
-  </p> 
-  <p>
-    built using: <a href="http://sass-lang.com/">Sass</a>, <a href="http://jashkenas.github.com/coffee-script/">CoffeeScript</a> and <a href="http://nanoc.stoneship.org/">Nanoc</a>. <a href="http://validator.w3.org/check?uri=http%3A%2F%2Fwww.maximeliron.com%2Fresume%2F">HTML5 compliant</a>.
   </p>
   <p>
-    <a href="https://github.com/ximus/maximeliron.com">Source on Github</a> | <a href="maxime-liron-resume.pdf">Download this as a PDF</a>
+    built using: <a href="http://sass-lang.com/" target="blank">Sass</a>, <a href="http://jashkenas.github.com/coffee-script/" target="blank">CoffeeScript</a> and <a href="http://nanoc.ws/" target="blank">Nanoc</a>. <a href="http://validator.w3.org/check?uri=http%3A%2F%2Fwww.maximeliron.com%2Fresume%2F" target="blank">HTML5 compliant</a>.
+  </p>
+  <p>
+    <a href="https://github.com/ximus/maximeliron.com" target="blank">Source on Github</a> | <a href="maxime-liron-resume.pdf">Download this as a PDF</a>
   </p>
 </footer>
