--- a/content/resume/index.html
+++ b/content/resume/index.html
@@ -1,6 +1,13 @@
 ---
-title: "Maxime Liron's Resume"
+title: Maxime Liron's Resume
+css: resume
+layout: profile
 ---
+<% content_for :header do %>
+  <link rel="stylesheet" href="../stylesheets/resume.css">
+  <script src="../javascripts/main.js" defer></script>
+<% end  %>
+
 <header>
   <h1>Maxime Liron's Resume</h1>
   <h2>
@@ -25,7 +32,7 @@ title: "Maxime Liron's Resume"
       <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
-  <a href="maxime-liron-resume.pdf" class="with-icon pdf-link">PDF Version</a>
+  <a href="maxime-liron-resume.pdf" class="with-icon pdf-link" target="_blank">PDF Version</a>
 </aside>
 
 <section id="contact">
@@ -51,7 +58,7 @@ title: "Maxime Liron's Resume"
 <section id="profile">
   <h2>Profile</h2>
   <p>
-    Web developer from the south of France, worked in San Francisco for two years. I have a strong interest for all fields of technology, always learning. I have acquired concrete experience in the field of web development and web interaction design. I have a good understanding of web systems.
+    Web developer from the south of France, have worked in San Francisco for the past 2+ years. I have a strong interest in all fields of technology, and am very keen on always learning & applying new skills. Over the past 4 years, I have worked hard to gain as much concrete experience in the field of web development and web interaction design as possible, including good understanding of web systems.
   </p>
   <p>
     I work mainly on the technical side of web applications, but I am always attentive to the bigger picture. I am most productive when I understand the mission behind a project.
@@ -72,22 +79,22 @@ title: "Maxime Liron's Resume"
       <li>Mobile <span>6/7</span></li>
       <li>Javascript <span>6/7</span></li>
       <li><a href="http://wwww.jquery.com/" title="Everyone's favorite DOM framework" target="blank">JQuery</a> <span>7/7</span></li>
-      <li><a href="http://www.sproutcore.com/" title="Framework for building large client side web applications, forked from Sproutcore framework" target="blank">AngularJS</a> <span>4/7</span></li>
-      <li><a href="http://www.sproutcore.com/" title="Framework for building large client side web applications, forked from Sproutcore framework" target="blank">EmberJS</a> <span>3/7</span></li>
+      <li><a href="http://www.angularjs.org/" title="Framework for building large client side web applications, developed by Google" target="blank">AngularJS</a> <span>4/7</span></li>
+      <li><a href="http://emberjs.com/" title="Framework for building large client side web applications, forked from Sproutcore framework" target="blank">EmberJS</a> <span>3/7</span></li>
       <li>Ability to Learn <span>7/7</span></li>
     </ul>
     <hr>
-    <h3>Human</h3>
+    <h3>Culture</h3>
     <ul class="inline-list">
       <li>Communication</li>
-      <li>Problem Solving</li>
+      <li>Collaboration</li>
       <li>Core Mission Understanding</li>
-      <li>Listenning</li>
+      <li>Active listening</li>
       <li>Independent</li>
       <li>Attention to Detail</li>
       <li>Dedication</li>
-      <li>Hard working</li>
-      <li>Relaxed</li>
+      <li>Hard Working</li>
+      <li>Easy-going </li>
     </ul>
   </div>
 
@@ -123,23 +130,25 @@ title: "Maxime Liron's Resume"
   <h2>Experience</h2>
 
   <p>
-    Six years of independent work, followed by two years of employment in silicon valley.
+    Six years of independent work, followed by two years of employment in Silicon Valley.
   </p>
 
   <h3>Web Engineering</h3>
   <ul>
-    <li>Much <em>front-end</em> experience</li>
+    <li>Substantial <em>front-end</em> experience</li>
     <li>Designed multiple web applications from the ground up</li>
     <li>Core participation in <em>large web deployment</em>, ~6 million users</li>
-    <li>Held strong responsibilities in <em>both front-end and back-ends</em> of web systems</li>
-    <li>Handling of critical <em>production</em> incidents effectively</li>
-    <li>Picking up complex scenarios quickly</li>
-    <li><em>Performance monitoring</em></li>
-    <li>Systems visibility, metrics</li>
-    <li>Payment systems</li>
-    <li>Large <em>email</em> delivery infrastructure</li>
-    <li><em>Test driven</em> development and working with a QA team</li>
-    <li>Investigating production systems (strace, dtrace, tcpdump, ...)</li>
+    <li>Held significant responsibilities in <em>both front-end and back-ends</em> of web systems</li>
+    <li>Handled critical <em>production</em> incidents effectively</li>
+    <li>Able to understand complex scenarios quickly:</li>
+    <ul>
+      <li><em>Performance monitoring</em></li>
+      <li>Systems visibility, metrics</li>
+      <li>Payment systems</li>
+      <li>Large <em>email</em> delivery infrastructure</li>
+    </ul>
+    <li><em>Test driven</em> development and experience with a QA team</li>
+    <li>Utilized tools for investigating production systems (strace, dtrace, tcpdump, ...)</li>
     <li>
       Systems design
       <ul>
@@ -152,15 +161,15 @@ title: "Maxime Liron's Resume"
 
   <h3>Product Development</h3>
   <ul>
-    <li>Participated in the thinking behind the marketing of multiple products</li>
+    <li>Participated in the thought process behind the marketing of multiple products</li>
     <li>Participated in the successful promotion of a new service within a new and disruptive industry trend</li>
     <li>Allowed a sales team to greatly augment their efficiency (and happiness) by architecting a collaborative web app</li>
     <li>Core participation in data-driven product development</li>
     <li>Product developement through <em>experimentation</em></li>
-    <li>Development and implementation of data models for product behaviour</li>
+    <li>Development and implementation of data models for product behavior</li>
   </ul>
 
-  <h3>Organisations</h3>
+  <h3>Work Environments</h3>
   <ul>
     <li>Worked in <em>distributed teams</em> (US east/west, India, France)</li>
     <li>Lean, fast moving <em>startup environments</em></li>
@@ -203,15 +212,15 @@ title: "Maxime Liron's Resume"
   </p>
 
   <p>
-    <em>Self taught</em> -- My interest in the technical web started at 17 yold. Learned a lot through books, open source projects and online material, clocked in <em>many</em> hours watching footage of conference talks. Learned loads through client projects.
+    <em>Self taught</em> -- My interest in the technical web started at 17 years old. Learned extensively through books, open source projects and online material, clocked in <em>many</em> hours watching footage of conference talks. Learned loads through client projects.
   </p>
 
   <p>
-    I left university after two years of physics and chemistry to pursue my web endeavors. The skills I learned did not require me to go to university but I do not rule out going back to university for harder to learn skills.
+    I left university after two years of physics and chemistry to pursue my web endeavors. The skills I learned did not require me to go to university but I do not rule out going back to university for more advanced skills.
   </p>
 
   <p>
-    I have a decent understanding of core computer science concepts (algorithms, compilers, ...). I am conscious of their roles and implications, though coming from a self-taught background, I have not studied them thouroughly. I am confident on my ability to strengthen my understanding of algorithms if the job requires it. I will do what is necessary to meet requirements.
+    I have a decent understanding of core computer science concepts (algorithms, compilers, ...). I am conscious of their roles and implications, though coming from a self-taught background, I have not studied them thoroughly. I am confident on my ability to strengthen my understanding of algorithms if the job requires it. I am willing to do whatever is necessary to meet requirements.
   </p>
 </section>
 
@@ -220,7 +229,7 @@ title: "Maxime Liron's Resume"
   <h2>Interests</h2>
 
   <p>
-    Most tickle my interest.
+    These pique my interest
   </p>
 
   <ul class="inline-list">
@@ -231,13 +240,14 @@ title: "Maxime Liron's Resume"
     <li>People</li>
     <li>Understanding things, learning</li>
     <li>Designing web system architectures</li>
-    <li>I really like user interfaces</li>
+    <li>I appreciate well-designed user interfaces</li>
     <li>Technology</li>
     <li>Robotics</li>
     <li>Data Visualization</li>
     <li>Travel -- Discovered North America, South America, South Asia, Europe with a back pack</li>
     <li>Sports -- Main sport is tennis, used to be rugby, I hike and run regularly</li>
     <li>Outdoors</li>
+    <li>Climbing</li>
     <li>Art</li>
     <li>Music</li>
     <li>Wine</li>
@@ -251,7 +261,7 @@ title: "Maxime Liron's Resume"
     <img src="http://www.w3.org/html/logo/badge/html5-badge-h-css3-semantics.png" width="90" height="35" alt="HTML5 Powered with CSS3 / Styling, and Semantics" title="HTML5 Powered with CSS3 / Styling, and Semantics">
   </a>
   <p>
-    last modified: <%= Time.now.strftime("%m/%d/%Y") %> - (work in progress, suggestions <a href="mailto:&#109;&#097;&#120;&#105;&#109;&#101;&#108;&#105;&#114;&#111;&#110;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">welcomed</a>)
+    last modified: <%= Time.now.strftime("%m/%d/%Y") %> -- work in progress, suggestions <a href="mailto:&#109;&#097;&#120;&#105;&#109;&#101;&#108;&#105;&#114;&#111;&#110;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">welcomed</a>
   </p>
   <p>
     built using: <a href="http://sass-lang.com/" target="blank">Sass</a>, <a href="http://jashkenas.github.com/coffee-script/" target="blank">CoffeeScript</a> and <a href="http://nanoc.ws/" target="blank">Nanoc</a>. <a href="http://validator.w3.org/check?uri=http%3A%2F%2Fwww.maximeliron.com%2Fresume%2F" target="blank">HTML5 compliant</a>.
