--- a/content/resume/index.html
+++ b/content/resume/index.html
@@ -116,6 +116,7 @@ layout: profile
     <ul class="inline-list">
       <li title="The Apache Hadoop software library is a framework that allows for the distributed processing of large data sets across clusters of computers using simple programming models."><a href="http://hadoop.apache.org/">Hadoop</a></li>
       <li>Java</li>
+      <li><a href="https://www.polymer-project.org">Polymer</a></li>
       <li>CoffeeScript</li>
       <li title="SproutCore is an open-source framework for building blazingly fast, innovative user experiences on the web."><a href="http://sproutcore.com/" target="blank">SproutCore</a></li>
       <li><a href="http://spinejs.com/" target="blank">SpineJS</a></li>
