--- a/content/index.html
+++ b/content/index.html
@@ -1,5 +1,7 @@
 ---
 title: About Maxime
+description: Web swiss army knife
+image: "http://www.maximeliron.com/images/me.png"
 layout: profile
 ---
 
@@ -67,6 +69,6 @@ layout: profile
     <a href="/resume/">More about me</a> &rarr;
   </li>
   <li>
-    <a href="/portail-notes.html">Home gate control notes</a> &rarr;
+    <a href="/notes/gate.html">Home gate control notes</a> &rarr;
   </li>
 </ul>
