--- a/content/resume/index.html
+++ b/content/resume/index.html
@@ -1,6 +1,7 @@
 ---
 title: Maxime Liron's Resume
-css: resume
+description: Web swiss army knife, general technologist
+image: "http://www.maximeliron.com/images/me.png"
 layout: profile
 ---
 <% content_for :header do %>
