--- a/maximeliron.com/content/index.html
+++ b/maximeliron.com/content/index.html
@@ -70,6 +70,6 @@ layout: profile
     <a href="/resume/">Resume</a> &rarr;
   </li>
   <li>
-    <a href="/notes/gate.html">Home gate control notes</a> &rarr;
+    <a href="https://ximus.xyz/notes/gate.html">Home gate control notes [WIP]</a> &rarr;
   </li>
 </ul>
