Touch ups on resume

--- a/maximeliron.com/content/resume/index.html
+++ b/maximeliron.com/content/resume/index.html
@@ -6,14 +6,18 @@ layout: profile
 ---
 <% content_for :header do %>
   <link rel="stylesheet" href="../stylesheets/resume.css">
+<% end  %>
+
+<% content_for :footer do %>
   <script src="../javascripts/main.js" defer></script>
 <% end  %>
 
 <header>
   <h1>Maxime Liron's Resume</h1>
   <h2>
-    <img src="/images/small-html5.png" alt="HTML5 Logo" height="15" width="15">
+    <img src="../images/small-html5.png" alt="HTML5 Logo" height="15" width="15">
     Full Stack Web developer
+
   </h2>
   <p>
     Bilingual -- English and French, canadian and french citizenships
@@ -59,10 +63,10 @@ layout: profile
 <section id="profile">
   <h2>Profile</h2>
   <p>
-    Web developer from the south of France, have worked in San Francisco for the past 2+ years. I have a strong interest in all fields of technology, and am very keen on always learning & applying new skills. Over the past 4 years, I have worked hard to gain as much concrete experience in the field of web development and web interaction design as possible, including good understanding of web systems.
+    Web developer from the south of France. I have worked in San Francisco for the past 2+ years. I have a strong interest in all fields of technology, and am very keen on always learning and applying new skills. Over the past 4 years, I have worked hard to gain as much experience as possible in the field of web development and web interaction design. I have a good understanding of web systems.
   </p>
   <p>
-    I work mainly on the technical side of web applications, but I am always attentive to the bigger picture. I am most productive when I understand the mission behind a project.
+    I work mainly on the technical side of web applications, but I am always attentive to the bigger picture. I can be most productive when I understand the mission behind a project.
   </p>
 <!--   <p>
     I hold the ability to rule them all: I can quickly understand non-trivial tools and practices. This allows me to be productive fast.
@@ -87,13 +91,13 @@ layout: profile
     <hr>
     <h3>Culture</h3>
     <ul class="inline-list">
-      <li>Communication</li>
-      <li>Collaboration</li>
+      <li>Communicative</li>
+      <li>Collaborative</li>
       <li>Core Mission Understanding</li>
       <li>Active listening</li>
       <li>Independent</li>
-      <li>Attention to Detail</li>
-      <li>Dedication</li>
+      <li>Attentive to Detail</li>
+      <li>Dedicated</li>
       <li>Hard Working</li>
       <li>Easy-going </li>
     </ul>
@@ -117,11 +121,12 @@ layout: profile
     <ul class="inline-list">
       <li title="The Apache Hadoop software library is a framework that allows for the distributed processing of large data sets across clusters of computers using simple programming models."><a href="http://hadoop.apache.org/">Hadoop</a></li>
       <li>Java</li>
-      <li><a href="https://www.polymer-project.org">Polymer</a></li>
+      <li><a title="Web components framework" href="https://www.polymer-project.org">Polymer</a></li>
       <li>CoffeeScript</li>
       <li title="SproutCore is an open-source framework for building blazingly fast, innovative user experiences on the web."><a href="http://sproutcore.com/" target="blank">SproutCore</a></li>
       <li><a href="http://spinejs.com/" target="blank">SpineJS</a></li>
       <li title="Ansible is a powerful automation engine that makes systems and apps simple to deploy"><a href="http://www.ansible.com/" target="blank">Ansible</a></li>
+      <li><a href="https://angularjs.org/" title="Yet another browser javascript framework">AngularJS</a></li>
       <li>C</li>
       <li>PHP</li>
     </ul>
@@ -174,10 +179,10 @@ layout: profile
   <h3>Work Environments</h3>
   <ul>
     <li>Worked in <em>distributed teams</em> (US east/west, India, France)</li>
-    <li>Lean, fast moving <em>startup environments</em></li>
-    <li>Github-style, flat organisation</li>
+    <li>Lean, fast paced <em>startup environments</em></li>
+    <li>Github-style, organisations with little hierarchy</li>
     <li>Experience with a <em>corporate envirnoment</em> and its constraints (need for stability, planning)</li>
-    <li>Led a session on scaling cloud infrastuctures at <a href="http://www.siliconvalley-codecamp.com/">Code Camp</a></li>
+    <li>Led a session on scaling cloud infrastuctures at <a href="http://www.siliconvalley-codecamp.com/">Code Camp 2011</a></li>
   </ul>
 </section>
 
