--- a/maximeliron.com/content/index.html
+++ b/maximeliron.com/content/index.html
@@ -29,7 +29,7 @@ layout: profile
   <li>8+ years designing and building websites
   <li><strong>Thourough full stack</strong> experience
   <li>Most proficient in Ruby and Javascript
-  <li>Intimate with data storage, analysis and experimentation
+  <li>Experienced with data storage, analysis and experimentation
 </ul>
 
 
@@ -69,7 +69,7 @@ layout: profile
     <a href="/resume/">Resume</a> &rarr;
   </li>
   <li>
-    <a href="https://ximus.xyz/notes/gate.html">[WIP] Home gate automation notes</a> &rarr;
+    <a href="https://ximus.xyz/notes/gate.html">Home gate automation notes</a> &rarr;
   </li>
 </ul>
 
