--- a/maximeliron.com/content/resume/index.html
+++ b/maximeliron.com/content/resume/index.html
@@ -6,176 +6,198 @@ layout: /profile.*
 ---
 
 <% content_for :header do %>
-<link rel="stylesheet" href="<%= @items['/stylesheets/resume.*'].path %>" />
-<% end %>
+  <link rel="stylesheet" href="<%= @items['/stylesheets/resume.*'].path %>" />
+  <% end %>
+    <% content_for :pre do %>
+      <aside class="pre no-print">
+        <a href="/maxime-liron-resume.pdf" class="with-icon pdf-link" target="_blank">PDF</a>
+      </aside>
+      <% end %>
 
-<% content_for :footer do %>
-<script src="../javascripts/main.js" defer></script>
-<% end %>
+        <div class="header-section">
+          <header>
+            <h1>Maxime Liron</h1>
+            <h2 class="mr-2 flex flex-row items-center">
+              <img class="mr-2 h-5 w-5" src="../images/small-html5.png" alt="HTML5 Logo" />
+              Full Stack Developer
+            </h2>
+          </header>
 
-<aside id="toc">
-  <h2>Table of Contents</h2>
-  <nav>
-    <ul>
-      <li><a href="#profile">Profile</a></li>
-      <li><a href="#experience">Experience</a></li>
-      <li><a href="#projects">Work</a></li>
-    </ul>
-  </nav>
-  <div class="flex-1"></div>
-  <a href="maxime-liron-resume.pdf" class="with-icon pdf-link" target="_blank"
-    >PDF Version</a
-  >
-</aside>
+          <section id="contact">
+            <h2 class="visuallyhidden">Contact</h2>
+            <ul>
+              <li class="email">
+                <h3>Email</h3>
+                <a
+                  href="mailto:&#109;&#097;&#120;&#105;&#109;&#101;&#108;&#105;&#114;&#111;&#110;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">&#109;&#097;&#120;&#105;&#109;&#101;&#108;&#105;&#114;&#111;&#110;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;</a>
+              </li>
+              <li class="github">
+                <h3>Github</h3>
+                <a href="https://github.com/ximus" target="blank">@ximus</a>
+              </li>
+            </ul>
+          </section>
+        </div>
 
-<div class="mt-6 mb-12 flex flex-col sm:flex-row justify-between sm:items-end">
-  <header>
-    <h1>Maxime Liron</h1>
-    <h2 class="mr-2 flex flex-row items-center">
-      <img
-        class="mr-2 h-5 w-5"
-        src="../images/small-html5.png"
-        alt="HTML5 Logo"
-      />
-      Full Stack Developer
-    </h2>
-    <!-- <p>
-              Vancouver, Canada
-            </p> -->
-  </header>
+        <article>
+          <section id="profile">
+            <h2>Profile</h2>
+            <ul class="with-bullets">
+              <li><em>15+ years</em> of experience working with web systems.</li>
+              <li><em>8 years</em> working for <em>startups in San Francisco</em>.</li>
+              <li>
+                <em>7 years</em> of independent <em>consulting in France</em>, early career.
+              </li>
+              <li>Passionate about <em>user experience</em>, detail oriented.</li>
+              <li>Experienced with all layers in the stack.</li>
+              <li>Currently based in <em>western Canada, PST</em>.</li>
+            </ul>
+          </section>
 
-  <section id="contact">
-    <h2 class="visuallyhidden">Contact</h2>
-    <ul>
-      <li class="email">
-        <h3>Email</h3>
-        <a
-          href="mailto:&#109;&#097;&#120;&#105;&#109;&#101;&#108;&#105;&#114;&#111;&#110;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;"
-          >&#109;&#097;&#120;&#105;&#109;&#101;&#108;&#105;&#114;&#111;&#110;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;</a
-        >
-      </li>
-      <li class="github">
-        <h3>Github</h3>
-        <a href="https://github.com/ximus" target="blank">@ximus</a>
-      </li>
-    </ul>
-  </section>
-</div>
+          <section id="skills">
+            <div>
+              <h3>Front</h3>
+              <ul class="inline-list">
+                <li>
+                  <a href="https://www.typescriptlang.org/">
+                    <img src="https://www.typescriptlang.org/favicon.ico" alt="" />
+                    Typescript
+                  </a>
+                </li>
+                <li>
+                  <a href="https://react.dev/" target="blank">
+                    <img src="https://react.dev/favicon.ico" alt="" />React
+                  </a>
+                </li>
+                <li>
+                  <a href="https://svelte.dev/" target="blank">
+                    <img src="https://svelte.dev/favicon.png" alt="" />
+                    Svelte
+                  </a>
+                </li>
+                <li>
+                  <a href="https://playwright.dev/" target="blank">
+                    <img src="https://playwright.dev/img/playwright-logo.svg" alt="" />
+                    Playwright
+                  </a>
+                </li>
+                <li>
+                  <a href="https://storybook.js.org/" target="blank">
+                    <img src="https://storybook.js.org/icon.svg" alt="" />
+                    Storybook
+                  </a>
+                </li>
+                <li>
+                  <a href="https://tailwindcss.com/" target="blank">
+                    <img src="https://tailwindcss.com/favicon.ico" alt="" />
+                    Tailwind
+                  </a>
+                </li>
+                <li>Design Systems</li>
+              </ul>
+            </div>
+            <div class="vr"></div>
+            <div>
+              <h3>Back</h3>
+              <ul class="inline-list">
+                <li>
+                  <a href="https://ruby-lang.org/">
+                    <img src="https://ruby-lang.org/favicon.ico" alt="" />
+                    Ruby
+                  </a>
+                </li>
+                <li>
+                  <a href="https://rubyonrails.org/">
+                    <img src="https://rubyonrails.org/assets/images/favicon.png" alt="" />
+                    Rails
+                  </a>
+                </li>
+                <li>
+                  <a href="https://nodejs.org/en">
+                    <img src="https://nodejs.org/favicon.ico" alt="" />
+                    Node
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.postgresql.org/">
+                    <img src="https://www.postgresql.org/favicon.ico" alt="" />
+                    Postgres
+                  </a>
+                </li>
+                <li>
+                  <a href="https://github.com/redis/redis">
+                    <img src="https://avatars.githubusercontent.com/u/1529926?s=200&v=4" alt="" />
+                    Redis
+                  </a>
+                </li>
+                <li>
+                  <a href="https://grpc.io/">
+                    <img src="https://grpc.io/favicons/favicon-32x32.png" alt="" />
+                    gRPC
+                  </a>
+                </li>
+                <li>
+                  <a href="https://kubernetes.io/">
+                    <img src="https://kubernetes.io/icons/favicon-32.png" alt="" />
+                    Kubernetes
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </section>
 
-<article>
-  <section id="profile">
-    <h2>Profile</h2>
-    <p>
-      6 years of web consulting early on in <em>France</em>. 8 years of full
-      time employment in <em>San Francisco</em>. Most recently, 3 years of
-      informal work and tech exploration.
-    </p>
-    <p>
-      No formal education. Worked in e-commerce and finance. Lean, fast moving
-      teams of early to mid stage startups.
-    </p>
-  </section>
+          <section id="projects">
+            <h2>Past Work</h2>
+            <ul>
+              <li class="past-project">
+                <div class="title-client-period">
+                  <div class="title-client">
+                    <h3>Consulting</h3>
+                    <p class="client">
+                      <img
+                        src="https://static.wixstatic.com/media/825621_d223eeb8aa224357acbc2ddc128ee91b%7Emv2.png/v1/fill/w_192%2Ch_192%2Clg_1%2Cusm_0.66_1.00_0.01/825621_d223eeb8aa224357acbc2ddc128ee91b%7Emv2.png"
+                        alt="" />
+                      <a href="https://www.asaak.com/">Asaak</a>,
+                      <img
+                        src="https://static.wixstatic.com/media/36f5df_8eb2357f2ca1441dac2e91b57449f3f0%7Emv2.png/v1/fill/w_192%2Ch_192%2Clg_1%2Cusm_0.66_1.00_0.01/36f5df_8eb2357f2ca1441dac2e91b57449f3f0%7Emv2.png"
+                        alt="" />
+                      <a href="https://www.charahealth.com/">Chara Health</a>, Arroway
+                    </p>
+                  </div>
+                  <p class="period">2021 - now</p>
+                </div>
+                <p class="tools">
+                  <span class="label">tools used:</span> Python, Django, Rails, Svelte,
+                  LitElement
+                </p>
+                <ul class="points-list with-bullets">
+                  <li>
+                    Part time contracting work as I invest myself in personal life
+                    projects
+                  </li>
+                </ul>
+              </li>
+              <% for experience in experience_list %>
+                <%= render '/experience.*' , experience %>
+                  <% end %>
+            </ul>
+          </section>
+        </article>
 
-  <section id="skills">
-    <div>
-      <div>
-        <h3>Front</h3>
-        <ul class="inline-list">
-          <li>Typescript</li>
-          <li><a href="https://react.dev/" target="blank">React</a></li>
-          <li><a href="https://svelte.dev/" target="blank">Svelte</a></li>
-          <li>Design Systems</li>
-        </ul>
-      </div>
-
-      <div>
-        <h3>Back</h3>
-        <ul class="inline-list">
-          <li>Ruby</li>
-          <li>Rails</li>
-          <li>Node</li>
-          <li>Postgres</li>
-          <li>Redis</li>
-          <li>gRPC</li>
-          <li>Kubernetes</li>
-        </ul>
-      </div>
-    </div>
-  </section>
-
-  <section id="experience">
-    <h2>Experience</h2>
-
-    <p>
-      Six initial years of independent work in France, followed by nine years of
-      employment in San Francisco.
-    </p>
-
-    <h3>Web Engineering</h3>
-    <ul>
-      <li>Substantial <em>front-end</em> experience</li>
-      <li>
-        Core participation in <em>large web deployment</em>, ~6 million users
-      </li>
-      <li>
-        Held significant responsibilities in
-        <em>both front-end and back-ends</em> of web systems
-      </li>
-      <li>Handled critical <em>production</em> incidents effectively</li>
-      <li>Navigated complex sytems:</li>
-      <ul>
-        <li>Financial platforms</li>
-        <li>Payment systems</li>
-        <li>Large <em>email</em> delivery infrastructure</li>
-      </ul>
-      <li><em>Test driven</em> development and experience with a QA team</li>
-      <li>
-        Systems design
-        <ul>
-          <li>
-            Understand the <em>system as whole</em>, thinking further than the
-            business application code
-          </li>
-          <li>Network architecture, <em>REST principles</em></li>
-          <li>Studied and deployed <em>Cloud architectures</em></li>
-        </ul>
-      </li>
-    </ul>
-
-    <h3>Product</h3>
-    <ul>
-      <li>Participated in the design of multiple products</li>
-      <li>
-        Exercised data-driven product development, <em>experimentation</em>
-      </li>
-      <li>Operationalized data models to drive product behavior</li>
-      <li>Interact closely with product, data and design teams</li>
-    </ul>
-  </section>
-
-  <section id="projects">
-    <h2>Recently</h2>
-    <ul>
-      <% for experience in experience_list %> <%= render '/experience.*' ,
-      experience %> <% end %>
-    </ul>
-  </section>
-</article>
-
-<footer>
-  <p>last modified: <%= Time.now.strftime("%m/%d/%Y") %></p>
-  <p>
-    built using: <a href="http://sass-lang.com/" target="blank">Sass</a>,
-    <a href="http://jashkenas.github.com/coffee-script/" target="blank"
-      >CoffeeScript</a
-    >
-    and <a href="http://nanoc.ws/" target="blank">Nanoc</a>.
-  </p>
-  <p>
-    <a href="https://github.com/ximus/maximeliron.com" target="blank"
-      >Source on Github</a
-    >
-    | <a href="maxime-liron-resume.pdf">Download this as a PDF</a> |
-    <a href="/resume-old/">Previous version</a>
-  </p>
-</footer>
+        <% content_for :footer do %>
+          <footer>
+            <p>
+              <a href="https://github.com/ximus/maximeliron.com" target="blank">Source on Github</a>
+              | <a href="/maxime-liron-resume.pdf">Download this as a PDF</a> |
+              <a href="/resume-old/">Previous version</a>
+            </p>
+            <p>
+              built using: <a href="http://sass-lang.com/" target="blank">Sass</a>,
+              <a href="http://jashkenas.github.com/coffee-script/" target="blank">CoffeeScript</a>
+              and <a href="http://nanoc.ws/" target="blank">Nanoc</a>.
+            </p>
+            <p>last modified: <%= Time.now.strftime("%m/%d/%Y") %>
+            </p>
+          </footer>
+          <script src="../javascripts/main.js" defer></script>
+          <% end %>
