add looking for statement

--- a/maximeliron.com/content/resume/index.html
+++ b/maximeliron.com/content/resume/index.html
@@ -52,6 +52,7 @@ layout: /profile.*
               <li>Experienced with all layers in the stack.</li>
               <li>Currently based in <em>western Canada, PST</em>.</li>
             </ul>
+            <p>&rarr; Looking for senior positions in either back end or front end, or both</p>
           </section>
 
           <section id="skills">
