wording touch oup

--- a/maximeliron.com/content/resume/index.html
+++ b/maximeliron.com/content/resume/index.html
@@ -190,11 +190,10 @@ layout: /profile.*
           <span class="label">tools used:</span> Python, Django, Rails, Svelte,
           LitElement
         </p>
+        <p class="description">
+          Part time contracting as I work on other life projects
+        </p>
         <ul class="points-list with-bullets">
-          <li>
-            Part time contracting work as I invest myself in personal life
-            projects
-          </li>
           <li>Built a front-end to a product recommendation engine</li>
           <li>App developement of an online health booking service</li>
           <li>Feature develoment for a lending platform</li>
